# fddb-ddjbed

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists.txt.user.example  CMakePresets.json  LICENSE  README.md  README_CLION.md  README_Windows.md  TEST_REPORT.md  build.bat  build.ps1  build.sh  check_syntax.sh  vcpkg.json
include/: config.h  logger.h  stats.h  wav_writer.h
src/: config.cpp  logger.cpp  main.cpp  stats.cpp  wav_writer.cpp
